# PIRE-DIRT

./: README.md  pyproject.toml  test.py  train.py
PIRE-DIRT/: PROJECT_TREE.txt  README.md  pyproject.toml  requirements.txt  test.py  train.py
PIRE-DIRT/configs/: default.yaml
PIRE-DIRT/docs/: PROJECT_STRUCTURE.md  README_zh-CN.md
PIRE-DIRT/scripts/: test_ddp.sh  train_ddp.sh
PIRE-DIRT/src/aigi_detector/: __init__.py
PIRE-DIRT/src/aigi_detector/data/: __init__.py  datasets.py
PIRE-DIRT/src/aigi_detector/engine/: evaluator.py  trainer.py
PIRE-DIRT/src/aigi_detector/models/: __init__.py  detector.py  fpsm.py  mil.py
PIRE-DIRT/src/aigi_detector/utils/: __init__.py  checkpoint.py  config.py  distributed.py  logging.py  metrics.py  seed.py
PIRE-DIRT/tests/: test_metrics.py
configs/: default.yaml
docs/: PROJECT_STRUCTURE.md  README.md  README_zh-CN.md
scripts/: test_ddp.sh  train_ddp.sh
src/pire_dirt/: __init__.py
src/pire_dirt/data/: transforms.py
src/pire_dirt/engine/: __init__.py  evaluator.py  trainer.py
src/pire_dirt/models/: __init__.py  detector.py  dirt.py  lora.py  pire.py
src/pire_dirt/utils/: checkpoint.py
tests/: test_checkpoint_compatibility.py  test_metrics.py
