[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pire-dirt"
version = "0.2.0"
description = "DINOv3-LoRA detector with PIRE and DIRT for AI-generated image detection"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "Pillow>=9.5",
  "PyYAML>=6.0",
  "safetensors>=0.4",
  "scikit-learn>=1.2",
  "timm>=1.0",
  "tqdm>=4.65",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
